Update role to match market

--- a/resume.sty
+++ b/resume.sty
@@ -72,7 +72,7 @@
 % Usage: \documentTitle{Name}{Details}
 \newcommand{\documentTitle}[2]{
   \begin{center}
-    {\Huge\color{accentTitle} #1}
+    {\huge\color{accentTitle} #1}
     \vspace{10pt}
     {\color{accentLine} \hrule}
     \vspace{2pt}
