--- a/resume.tex
+++ b/resume.tex
@@ -21,19 +21,33 @@
 % Heading %
 %---------%
 \documentTitle{
-\raisebox{-7.5mm}{
-  \begin{tikzpicture}
-    \clip (0,0) circle (10mm);
-    \node at (0,0) {\includegraphics[width=20mm]{reinier.png}};
-  \end{tikzpicture}
+  \begin{tabular}{@{}l l@{}}
+    \raisebox{-2mm}{
+      \begin{tikzpicture}
+        \clip (0,0) circle (10mm);
+        \node at (0,0) {\includegraphics[width=20mm]{reinier.png}};
+      \end{tikzpicture}
+    } &
+    \begin{tabular}[b]{@{}@{\hspace{2mm}}l@{}}
+      \textbf{Reinier Kip} \\
+      Freelance Software Engineer \& Architect
+    \end{tabular}
+  \end{tabular}
+}{
+  \href{tel:027 8181 957}{\raisebox{0\height} \faPhone\ 027 8181 957}
+  ~ | ~
+  \href{mailto:hello@reinier.nz}{\raisebox{0\height} \faEnvelope\ hello@reinier.nz}
+  ~ | ~
+  \href{https://linkedin.com/in/rjkip}{\raisebox{0\height} \faLinkedin\ linkedin.com/in/rjkip}
+  ~ | ~
+  {\raisebox{0\height} \faMapPin\ Christchurch, New Zealand}
 }
-Reinier Kip, Freelance Web Developer}{\href{tel:027 8181 957}{\raisebox{0\height} \faPhone\ 027 8181 957} ~ | ~ \href{mailto:hello@reinier.nz}{\raisebox{0\height} \faEnvelope\ hello@reinier.nz} ~ | ~ \href{https://linkedin.com/in/rjkip}{\raisebox{0\height} \faLinkedin\ linkedin.com/in/rjkip} ~ | ~ {\raisebox{0\height} \faMapPin\ Christchurch, New Zealand}}
 
     %---------%
     % Summary %
     %---------%
     \tinysection{Summary}
-    Freelance web developer with 17+ years' experience writing secure and reliable web software.
+    Freelance software engineer and architect with 17+ years' experience writing secure and reliable web software.
     I hit the ground running and deliver quickly. I can work independently or as part of a team.
     I enjoy hiking, weightlifting, and board games.
 
